--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -52,14 +52,14 @@
     <section class="glass">
         <div class="dashboard">
             <div class="user">
-                <img src="./images/avatar.png" alt="" />
-                <h3>Service Provider Site </h3>
+
+                <h3>Mental health Group </h3>
                 <p></p>
             </div>
             <div class="links">
                 <div class="link">
                     <img src="" alt="" />
-                    <h2>Services</h2>
+                    <h2>Various health Group</h2>
                 </div>
                 <!-- <div class="link">
                     <img src="./images/steam.png" alt="" />
@@ -75,58 +75,58 @@
                 </div> -->
             </div>
             <div class="pro">
-                <h2>Join for services.</h2>
+                <h2>Join by creating a account.</h2>
                 <img src="" alt="" />
             </div>
         </div>
         <div class="games">
             <div class="status">
-                <h1>Some of the services</h1>
+                <h1>Some of the Group</h1>
 
             </div>
             <div class="cards">
                 <div class="card">
-                    <img src="assets/gardener.jpg" alt="" id="pic" />
+                    <img src="assets/m1.jpg" alt="" id="pic" />
                     <div class="card-info">
-                        <h2>Gardener</h2>
-                        <p>Hire by just creating a account</p>
+                        <h2>Mental Health</h2>
+                        <p>Join by just creating a account</p>
                         <div class="progress"></div>
                     </div>
-                    <h2 class="percentage"> Rating 60%</h2>
+                    <h2 class="percentage"> Active by 60%</h2>
                 </div>
                 <div class="card">
-                    <img src="assets/electrician.jpg" alt="" id="pic" />
+                    <img src="assets/m2.jpg" alt="" id="pic" />
                     <div class="card-info">
-                        <h2>Electrician</h2>
-                        <p>Hire by just creating a account</p>
+                        <h2>Cancer Warriors</h2>
+                        <p>Join by just creating a account</p>
                         <div class="progress"></div>
                     </div>
                     <h2 class="percentage"> Rating 70%</h2>
                 </div>
                 <div class="card">
-                    <img src="assets/carpenter.webp" alt="" id="pic" />
+                    <img src="assets/m3.jpg" alt="" id="pic" />
                     <div class="card-info">
-                        <h2>Carpenter</h2>
-                        <p>Hire by just creating a account</p>
+                        <h2>Sucide Prevention</h2>
+                        <p>Join by just creating a account</p>
                         <div class="progress"></div>
                     </div>
-                    <h2 class="percentage"> Rating 73%</h2>
+                    <h2 class="percentage"> Active by 73%</h2>
                 </div>
 
                 <div class="card">
-                    <img src="assets/plumber.jpg" alt="" id="pic" />
+                    <img src="assets/m4.jpg" alt="" id="pic" />
                     <div class="card-info">
-                        <h2>Plumber</h2>
-                        <p>Hire by just creating a account</p>
+                        <h2>Dear and near ones loss</h2>
+                        <p>Join by just creating a account</p>
                         <div class="progress"></div>
                     </div>
-                    <h2 class="percentage"> Rating 60%</h2>
+                    <h2 class="percentage"> Active by 60%</h2>
                 </div>
                 <div class="card">
 
                     <div class="card-info">
                         <h2>To Know More </h2>
-                        <p>Click on Services at top</p>
+                        <p>Log in</p>
 
                     </div>
 
@@ -138,63 +138,3 @@
 </main>
 <div class="circle1"></div>
 <div class="circle2"></div>
-
-<div class="second">
-
-
-
-    <main>
-        <section class="glass">
-            <div class="dashboard">
-                <div class="user">
-                    <img src="./images/avatar.png" alt="" />
-                    <h3>HOW TO JOIN </h3>
-                    <p>To be a part of serice provider is by a just creating a account in this site <br>and enjoy all the features</p>
-                </div>
-                <!-- <div class="links">
-                    <div class="link">
-                        <img src="" alt="" />
-                        <h2></h2>
-                    </div>
-
-                </div> -->
-                <!-- <div class="pro">
-                    <h2>Join for services.</h2>
-                    <img src="" alt="" />
-                </div> -->
-            </div>
-            <div class="games">
-                <div class="status">
-                    <h1>How Does it work</h1>
-
-                </div>
-                <div class="cards">
-                    <div class="card">
-
-                        <div class="card-info">
-                            <h2>TO JOIN</h2>
-                            <p>If you are a service provider signup and enlist youself as Service <br> provider and you would be enlisted by accepting the terms and conditions</p>
-                            <div class="progress"></div>
-                        </div>
-                        <!-- <h2 class="percentage"> Rating 60%</h2> -->
-                    </div>
-
-                    <div class="card">
-
-                        <div class="card-info">
-                            <h2> TO HIRE</h2>
-                            <p>Sign up and start using the various services provided by the workers and hire them by single click</p>
-
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-
-        </section>
-
-
-    </main>
-
-
-</div>
