--- a/src/app/dash2/dash2.component.html
+++ b/src/app/dash2/dash2.component.html
@@ -43,7 +43,7 @@
     <div class="form-group">
 
 
-        <textarea class="form-control rounded-0 " name="p_name" [(ngModel)]="grp1" [(ngModel)]="productItem.userservice" id="exampleFormControlTextarea2" rows="3"></textarea>
+        <textarea class="form-control rounded-0 " name="p_name" [(ngModel)]="grp1" [(ngModel)]="productItem.user" id="exampleFormControlTextarea2" rows="3"></textarea>
     </div>
 
 
