--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -81,7 +81,7 @@
         </div>
         <div class="games">
             <div class="status">
-                <h1>Some of the Group</h1>
+                <h1> Groups</h1>
 
             </div>
             <div class="cards">
