--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -6,7 +6,7 @@
     border-radius: 25px;
     box-sizing: inherit;
     border: 5px solid white;
-    background-color: burlywood;
+    background-color: #0f866d;
 }
 
 .form-group {
