--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -6,7 +6,7 @@
     border-radius: 25px;
     box-sizing: inherit;
     border: 5px solid white;
-    background-color: rgb(71, 66, 66);
+    background-color: #0f866d;
 }
 
 .form-row {
