--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -144,7 +144,7 @@ h3 {
 main {
     font-family: "Poppins", sans-serif;
     min-height: 100vh;
-    background: linear-gradient(to right top, #65dfc9, #6cdbeb);
+    background: linear-gradient(to right top, #022c38, #0f866d);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -210,7 +210,7 @@ main {
 }
 
 .pro {
-    background: linear-gradient(to right top, #65dfc9, #6cdbeb);
+    background: linear-gradient(to right top, #106d5c, #6cdbeb);
     border-radius: 2rem;
     color: white;
     padding: 1rem;
@@ -263,7 +263,7 @@ main {
 }
 
 .progress {
-    background: linear-gradient(to right top, #65dfc9, #6cdbeb);
+    background: linear-gradient(to right top, #98b93d, #045858);
     width: 100%;
     height: 25%;
     border-radius: 1rem;
@@ -288,7 +288,7 @@ main {
 
 .percentage {
     font-weight: bold;
-    background: linear-gradient(to right top, #65dfc9, black);
+    background: linear-gradient(to right top, #4df0a4, black);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -303,7 +303,7 @@ main {
     /* center the image vertically and horizontally */
     background-position: top center;
     /* round the edges to a circle with border radius 1/2 container size */
-    border-radius: 50%;
+    border-radius: 45%;
     position: relative;
     right: 2%;
 }
